# mppm

./: README.md  install.sh  mypy.ini  pyproject.toml  python_versions.txt
example_package/: pyproject.toml
example_package/src/: main.py
mppm/: candidate.py  env.py  locker.py  main.py  main_impl.py  provider.py  pyproject.py  python_versions.txt  util.py
test/: test_big.py  test_small.py
test/conf/python_version/311/: pyproject.toml
