[project]
requires = ["poetry"]
build-backend = "poetry.masonry.api"

[tool.poetry]
name = "mppm"
version = "0.1.0"
description = "My Package Manager"
authors = ["T.M. <takeknock@gmail.com>"]

[tool.poetry.scripts]
mppm = "mppm.main:cli"

[tool.poetry.dependencies]
python = ">=3.10"
click = "*"
tomlkit = "*"
resolvelib = "==1.0.1"
requests = "*"
packaging = "*"
virtualenv = "*"
build = "*"
twine = "*"

[tool.poetry.group.dev.dependencies]
isort = "^5.13.2"
black = "^24.4.2"
mypy = "^1.10.1"
pytest = "^8.2.2"
types-requests = "^2.32.0.20240622"
