[project]
name = "example_package"
version = "0.1.0"
description = "Example Package for mppm"
requires-python = ">=3.10"
dependencies = [
    "requests>=2.29.0",
    "urllib3<2.0.0"
]

[build-system]
requires = ["wheel", "setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"example_package" = "src"}